--- a/public/puzzleHouse/index.html
+++ b/public/puzzleHouse/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Test</title>
+    <title>Unity WebGL Player | PuzzleHouse</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Test</div>
+        <div id="unity-build-title">PuzzleHouse</div>
       </div>
     </div>
     <script>
@@ -63,8 +63,8 @@
         frameworkUrl: buildUrl + "/puzzleHouse.framework.js",
         codeUrl: buildUrl + "/puzzleHouse.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Test",
+        companyName: "CPEGameHub",
+        productName: "PuzzleHouse",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
